@@ -1,5 +1,2 @@
-AUX site-start.el 362 RMD160 76e7bcac5b67caa4f60af42e1a6a3aef0eb461fc SHA1 26fe13924f86abe3989bdc43a6e744d52b9547b2 SHA256 6ab443ae7a80865827efd77124d2840c06b251d9a465e9797b85839db20ffd39
-DIST emacs-common-gentoo-1.0.tar.gz 14268 RMD160 3dad4c2955fc8d9be095500305d67c36e587eef0 SHA1 2d646e3761a2eb23c359e0fb45743f553ade07b6 SHA256 eafc05a71b7b77084073ab82e9bf92c4a4dec1b61feb8a7adaa0b3194f95e2cd
-EBUILD emacs-common-gentoo-1.0-r20.ebuild 2104 RMD160 0f9a09368ec3b638db987a583fd09a672e30ca4c SHA1 03d065534d3a76ff7d47256b4775497b77d2cfe0 SHA256 5f7070f883663a363291eaba0c9bb3ac053b74e03b4eb6cc852adee97cd12516
-MISC ChangeLog 812 RMD160 60d1975d1cd269e2c0869dc861739749c81f74f1 SHA1 24364ab50dece6b74d4f9eb0a3643f1de2c9593f SHA256 19f95d804b3cc00669c6671dc593c0807d0118178dfe1211612ab4feded01d28
+MISC ChangeLog 935 RMD160 c618b1d097d63812465fe6b56c46a4f2c0f31944 SHA1 40f35fb25347ec762f44038d5ca014074ddd30bc SHA256 1a45709697725f5275a30c614d8188a34e4c085cc578853e0d34ed4ec9640ac5
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
