@@ -1,12 +1,0 @@
-;;; site-start.el			-*- no-byte-compile: t -*-
-
-;;; Commentary:
-;; This default site startup file for Emacs was created by package
-;; app-emacs/emacs-common-gentoo. You may modify this file or replace
-;; it by your own site initialisation.
-
-;;; Code:
-;; Load site initialisation for Gentoo installed packages.
-(require 'site-gentoo)
-
-;;; site-start.el ends here
